# becoming

./: .gitignore  FRONTEND_DEPLOYMENT.md  PASEO_DEPLOYMENT_INSTRUCTIONS.md  README.md  deploy-local.js  deploy-paseo.sh  deploy-with-api.js  deploy.sh  manual-deployment-guide.js
.cargo/: config.toml
.github/workflows/: contract-ci.yml
contracts/: Cargo.toml  Dockerfile  build-direct.sh  build-metadata.sh  build.sh  docker-build.sh  lib.rs  milestone.json  rustfmt.toml
contracts/.cargo/: config.toml
frontend/: .env  README.md  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts  vitest.config.ts
frontend/public/: becoming.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AddMilestoneForm.tsx  Header.tsx  HexagonMesh.tsx  MilestoneSuccessModal.tsx  MintButton.tsx  ShareJourney.tsx  ShareMilestone.tsx  WalletSelector.test.tsx  WalletSelector.tsx
frontend/src/components/layout/: Layout.tsx  Navbar.tsx
frontend/src/components/ui/: AccountSelector.tsx  AnimatedButton.tsx  Avatar.tsx  BackgroundAnimation.tsx  Button.test.tsx  Button.tsx  Card.tsx  (+4 more)
frontend/src/contracts/: becoming.json
frontend/src/hooks/: contract-metadata-new.json  contract-metadata.json  contract-metadata.ts  useContract.test.ts  useContract.ts
frontend/src/pages/: CelebrationPage.tsx  JourneyPage.tsx  MintPage.tsx  PublicProfilePage.tsx
frontend/src/styles/: hexagonMesh.css
frontend/src/utils/: formatting.ts  hash.ts  validation.ts
frontend/tests/: setup.ts
scripts/: deploy-testnet.sh  extract-contract-interface.js
